// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns female names 1`] = `
Array [
  Object {
    "isFavorite": true,
    "name": "sveta",
  },
]
`;

exports[`returns male names 1`] = `
Array [
  Object {
    "isFavorite": true,
    "name": "artur",
  },
  Object {
    "name": "pierre",
  },
]
`;
